--- a/CHY/chy.html
+++ b/CHY/chy.html
@@ -3,11 +3,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Your Name</title>
+  <title>Charlotte Ho, Industrial Designer</title>
 </head>
 <body>
-   <h1>Hi My name is *****</h1>
-   <p>add your profile text here</p>
+   <h1>Hi My name is Charlotte Ho.</h1>
+   <p>I am an industrial designer currently studying in the National University of Singapore.</p>
 
    <h2>My strengthes as a designer are...</h2>
     <ul>
@@ -19,8 +19,8 @@
       <li>Strength04</li>
     </ul>
 
-   <h2>My Teammate is Charlotte Ho</h2>
-   <p><a href="char-hy.html">Charlotte Ho</a></p>
+   <h2>My Teammate is Kianne Lim</h2>
+   <p><a href="index.html">Kianne Lim</a></p>
 </body>
 
 </html>
