--- a/kianne.html
+++ b/kianne.html
@@ -3,11 +3,15 @@
  <html lang="en">
  <head>
    <meta charset="utf-8">
+   <div class="topnav">
+    <a class="active" href="#home">about</a>
+    <a href="#news">experiments</a>
+  </div>
    <title>Your Name</title>
    <img src="image/kiannedp.png" alt="short description" style="width:500px;height:500px;">
  </head>
  <body>
-    <h1>Hello, it's Kianne!</h1>
+    <h1>Kianne</h1>
     <p>Kianne is a Singaporean industrial designer. 
         Her story started with a cup of coffee at a coffee roastery as a business planning executive. 
         Enchanted by the smell of beans working alongside state-of-the-art coffee equipment, she is 
