--- a/kianne.html
+++ b/kianne.html
@@ -4,18 +4,17 @@
  <head>
    <meta charset="utf-8">
    <div class="topnav">
-    <a class="active" href="#home">about</a>
-    <a href="#news">experiments</a>
+    <a class="active" href="#about">about</a>
+    <a href="#experiments">experiments</a>
   </div>
    <title>Your Name</title>
    <img src="image/kiannedp.png" alt="short description" style="width:500px;height:500px;">
  </head>
  <body>
     <h1>Kianne</h1>
-    <p>Kianne is a Singaporean industrial designer. 
-        Her story started with a cup of coffee at a coffee roastery as a business planning executive. 
-        Enchanted by the smell of beans working alongside state-of-the-art coffee equipment, she is 
-        Her design keeps the balance between elegance and practicality.</p>
+    <p>Kianne is a Singaporean industrial designer. Her story started with a delicious cup of fine arabica at a local coffee roastery where she worked alongside state-of-the-art coffee equipment. Captivated by how design and technology can come together to craft a lovely beverage and bringing smiles to the table, she endeavours to design meaningful experiences. Her design strives for a balance between elegance and practicality.
+
+    </p>
  
     <h2>As a designer, she values</h2>
      <ul>
