--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
  <!DOCTYPE html>
  <html lang="en">
+  <div class="topnav">
+    <a class="active" href="#Journal">Journal</a>
+    <a href="#about">About Us</a>
+  </div>
  <head>
    <meta charset="utf-8">
-   <title>ID2116 Team X Project Page</title>
+   <!--- <title>ID2116 Team X Project Page</title> --->
    <link rel="stylesheet" type="text/css" href="style.css">
  </head>
  <body>
