--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
  <!DOCTYPE html>
  <html lang="en">
+  <body bgcolor="#171230">
   <div class="topnav">
     <a class="active" href="#Journal">Journal</a>
     <a href="#about">About Us</a>
