--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
  <!DOCTYPE html>
  <html lang="en">
+   <style>body {
+    background-color: #000000
+    }</style>
   <body bgcolor="#171230">
   <div class="topnav">
     <a class="active" href="#Journal">Journal</a>
@@ -10,12 +13,13 @@
    <!--- <title>ID2116 Team X Project Page</title> --->
    <link rel="stylesheet" type="text/css" href="style.css">
  </head>
+
+ <!---
  <body>
     <h1>This is a Heading</h1>
     <p>This is a paragraph.</p>
     <p>This is another paragraph.</p>
-    <p>This is a third paragraph.</p>
- </body>
+    <p>This is a third paragraph.</p> 
+ </body>-->
  
  </html>
-=======
