--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <a class="active" href="#Journal">Journal</a>
     <a href="#about">About Us</a>
   </div>
+
+  <img src="charki.png" alt="charki">
  <head>
    <meta charset="utf-8">
    <!--- <title>ID2116 Team X Project Page</title> --->
