--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <a href="#about">About Us</a>
   </div>
 
-  <img src="image/charki.png" alt="charki">
+  <img src="image/charki.PNG" alt="charki">
  <head>
    <meta charset="utf-8">
    <!--- <title>ID2116 Team X Project Page</title> --->
