--- a/index.html
+++ b/index.html
@@ -6,19 +6,10 @@
     <a href="#about">About Us</a>
   </div>
 
-  <img src="image/charki.PNG" alt="charki">
+  <img src="image/charki.png" alt="charki">
  <head>
    <meta charset="utf-8">
-   <!--- <title>ID2116 Team X Project Page</title> --->
+   
    <link rel="stylesheet" type="text/css" href="style.css">
- </head>
-
- <!---
- <body>
-    <h1>This is a Heading</h1>
-    <p>This is a paragraph.</p>
-    <p>This is another paragraph.</p>
-    <p>This is a third paragraph.</p> 
- </body>-->
- 
+ </head> 
  </html>
