--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
  <html lang="en">
    
   <div class="topnav">
-    
+
     <a class="active" href="#Journal">Journal</a>
     <a href="#about">About Us</a>
   </div>
-  
+
 
  <head>
    <meta charset="utf-8">
-   <img src="image/charki.png" alt="charki">
+   <img src="IMAGE/charki.png" alt="charki">
    <link rel="stylesheet" type="text/css" href="style.css">
  </head> 
  </html>
