--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
  <head>
    <meta charset="utf-8">
-   <img src="IMAGE/charki.png" alt="charki">
+   <img src="IMAGE/charki.png" alt="charki" width="500">
    <link rel="stylesheet" type="text/css" href="style.css">
  </head> 
  </html>
