--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
  <!DOCTYPE html>
  <html lang="en">
-   
-  <div class="topnav">
-
-    <a class="active" href="#Journal">Journal</a>
-    <a href="#about">About Us</a>
+ <head>
+   <meta charset="utf-8">
+   <link rel="stylesheet" type="text/css" href="style.css">
+   <div class="hero-image">
+    <div class="hero-text">
+      <h1>charki</h1>
+      <p>we are microbit tinkers</p>
+      <button>hire us</button>
+    </div>
   </div>
 
 
- <head>
-   <meta charset="utf-8">
-   <img IMG class="displayed" src="IMAGE/charki.png" alt="charki" width="800" align='centre'>
-   <link rel="stylesheet" type="text/css" href="style.css">
  </head> 
  </html>
