--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
  <!DOCTYPE html>
  <html lang="en">
  <head>
+   <style>
    <meta charset="utf-8">
    <link rel="stylesheet" type="text/css" href="style.css">
    <div class="hero-image">
@@ -11,6 +12,6 @@
     </div>
   </div>
 
-
+</style>
  </head> 
  </html>
