--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
  <!DOCTYPE html>
  <html lang="en">
  <head>
-  
    <meta charset="utf-8">
    <link rel="stylesheet" type="text/css" href="style.css">
+   <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+   
    <div class="hero-image">
     <div class="hero-text">
       <h1>charki</h1>
