--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
  <head>
    <meta charset="utf-8">
    <link rel="stylesheet" type="text/css" href="style.css">
-   <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
-   
+   <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="style.css">
+
    <div class="hero-image">
     <div class="hero-text">
       <h1>charki</h1>
