--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
    <meta charset="utf-8">
    <link rel="stylesheet" type="text/css" href="style.css">
    <link href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap" rel="style.css">
+   <link href="https://fonts.googleapis.com/css?family=Megrim&display=swap" rel="style.css">
 
    <div class="hero-image">
+    <div class="hero-charki">
+      <h1>charki</h1></div>
+
     <div class="hero-text">
-      <h1>charki</h1>
       <p>we are microbit tinkers</p>
       <button>hire us</button>
     </div>
