dividing h1 into another div

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <link href="https://fonts.googleapis.com/css?family=Megrim&display=swap" rel="style.css">
 
    <div class="hero-image">
-    <div class="hero-charki">
+    <div class="hero-text">
       <h1>charki</h1></div>
 
     <div class="hero-text">
