removing div added earlier

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
    <div class="hero-image">
     <div class="hero-text">
-      <h1>charki</h1></div>
+      <h1>charki</h1>
       <p>we are microbit tinkers</p>
       <button>hire us</button>
     </div>
