--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
    <div class="hero-image">
     <div class="hero-text">
-      <h1>charki</h1>
+      <h1> <b></b>charki</h1>
       <p>we are microbit tinkers</p>
       <button>hire us</button>
     </div>
