--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="hero-text">
       <h1> <b></b>charki</h1>
       <p>we are microbit tinkers</p>
-      <button>hire us</button>
+      <div class="button"><button>hire us</button></div>
     </div>
   </div>
 
