increase font size 'charki'

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
    <div class="hero-image">
     <div class="hero-text">
-      <h1> <b></b>charki</h1>
+      <font size="+4"><h1> <b></b>charki</h1></font>
       <p>we are microbit tinkers</p>
       <div class="button"><button>hire us</button></div>
     </div>
