--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="hero-text">
       <font size="+4"><h1> <b></b>charki</h1></font>
       <p>we are microbit tinkers</p>
-      <div class="button"><button>hire us</button></div>
+      <button class="button">hire us</button>
     </div>
   </div>
 
