--- a/KIANNE/kianne.html
+++ b/KIANNE/kianne.html
@@ -1,11 +1,11 @@
 
  
    <title>Your Name</title>
-   <img src="image/kiannedp.png" alt="short description" style="width:500px;height:500px;">
+   <img src="KIANNE/images/kiannedp.png" alt="short description" style="width:500px;height:500px;">
  </head>
  <body>
     <h1>Kianne</h1>
-    <p>Kianne is a Singaporean industrial designer. Her story started with a delicious cup of fine arabica at a local coffee roastery where she worked alongside state-of-the-art coffee equipment. Captivated by how design and technology can come together to craft a lovely beverage and bringing smiles to the table, she endeavours to design meaningful experiences. Her design strives for a balance between elegance and practicality.
+    <p>Kianne is a Singaporean industrial designer. Her story started with a delicious cup of fine arabica at a local coffee roastery where she worked alongside state-of-the-art coffee equipment. Captivated by how design and technology can come together to craft a lovely beverage and bring smiles to the table, she endeavours to design meaningful experiences. Her design strives for a balance between elegance and practicality.
 
     </p>
  
@@ -17,8 +17,8 @@
        <li>Empathy</li>
      </ul>
  
-    <h2>My Teammate is Charlotte.</h2>
-    <p><a href="char-hy.html">Charlotte</a></p>
+    <h2>Meet her tinker partner <a href="char-hy.html">Charlotte </a>.</h2>
+    
  </body>
  
  </html>
