--- a/KIANNE/kianne.html
+++ b/KIANNE/kianne.html
@@ -1,10 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="kiannestyle.css">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
 
- 
-   <title>Your Name</title>
-   <img src="KIANNE/images/kiannedp.png" alt="short description" style="width:500px;height:500px;">
- </head>
- <body>
+  <div class="logotext">
     <h1>Kianne</h1>
+  </div>
+
+   <img src="KIANNE/images/kiannedp.png" alt="short description" style="width:500px;height:500px;">
+   
+ <body>
+   
     <p>Kianne is a Singaporean industrial designer. Her story started with a delicious cup of fine arabica at a local coffee roastery where she worked alongside state-of-the-art coffee equipment. Captivated by how design and technology can come together to craft a lovely beverage and bring smiles to the table, she endeavours to design meaningful experiences. Her design strives for a balance between elegance and practicality.
 
     </p>
@@ -21,4 +29,5 @@
     
  </body>
  
- </html>
+</head> 
+</html>
