--- a/KIANNE/kianne.html
+++ b/KIANNE/kianne.html
@@ -6,8 +6,8 @@
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
 
   <div class="logotext">
-    <h1>Kianne</h1>
-  </div>
+    <body>kiannelim</body>
+    </div>
 
    <img src="KIANNE/images/kiannedp.png" alt="short description" style="width:500px;height:500px;">
    
