experimenting with h1 tag

--- a/KIANNE/kianne.html
+++ b/KIANNE/kianne.html
@@ -6,7 +6,7 @@
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
 
   <div class="logotext">
-    <body>kiannelim.</body>
+    <h1>kiannelim.</h1>
     </div>
 
  <body>
