--- a/KIANNE/kianne.html
+++ b/KIANNE/kianne.html
@@ -10,7 +10,7 @@
     </div>
 
  <body>
-   <div>
+   <div class="bodytext">
     <p>Kianne is a Singaporean industrial designer. Her story started with a delicious cup of fine arabica at a local coffee roastery where she worked alongside state-of-the-art coffee equipment. Captivated by how design and technology can come together to craft a lovely beverage and bring smiles to the table, she endeavours to design meaningful experiences. Her design strives for a balance between elegance and practicality.
 
     </p>
