--- a/KIANNE/kianne.html
+++ b/KIANNE/kianne.html
@@ -7,11 +7,11 @@
 
   <div class="logotext">
     <h1>kiannelim.</h1>
-    <div class="bodytext">
+    <div class="columntext, bodytext">
       <p>Kianne is a Singaporean industrial designer. Her story started with a delicious cup of fine arabica at a local coffee roastery where she worked alongside state-of-the-art coffee equipment. Captivated by how design and technology can come together to craft a lovely beverage and bring smiles to the table, she endeavours to design meaningful experiences. Her design strives for a balance between elegance and practicality.
   
-      </p>
-   
+      </p></div>
+      <div class="bodytext">
       <h2>As a designer, she values</h2>
        <ul>
          <li>Analytical Sensibility</li>
