--- a/KIANNE/kianne.html
+++ b/KIANNE/kianne.html
@@ -4,9 +4,16 @@
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="kiannestyle.css">
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
-
+  
+  <div class="topnav">
   <div class="logotext">
-    <h1>kiannelim.</h1>
+    <h1>kiannelim.</h1>         
+    <div class="bodytext, topnav-right">
+          <a href="https://www.behance.net/kiannelim?tracking_source=search%7Ckianne%20lim"> projects </a>
+          <a href="https://www.instagram.com/kiannelim/"> insta </a>
+          <a href="mailto: design@kiannelim.com"> contact me </a>
+    </div> 
+    </div>
     <div class="columntext, bodytext">
       <p>Kianne is a Singaporean industrial designer. Her story started with a delicious cup of fine arabica at a local coffee roastery where she worked alongside state-of-the-art coffee equipment. Captivated by how design and technology can come together to craft a lovely beverage and bring smiles to the table, she endeavours to design meaningful experiences. Her design strives for a balance between elegance and practicality.
   
