open links in new tab

--- a/KIANNE/kianne.html
+++ b/KIANNE/kianne.html
@@ -9,9 +9,9 @@
   <div class="logotext">
     <h1>kiannelim.</h1>         
     <div class="bodytext, topnav-right">
-          <a href="https://www.behance.net/kiannelim?tracking_source=search%7Ckianne%20lim"> projects </a>
-          <a href="https://www.instagram.com/kiannelim/"> insta </a>
-          <a href="mailto: design@kiannelim.com"> contact me </a>
+          <a href="https://www.behance.net/kiannelim?tracking_source=search%7Ckianne%20lim" target="_blank"> projects </a>
+          <a href="https://www.instagram.com/kiannelim/" target="_blank"> insta </a>
+          <a href="mailto: design@kiannelim.com" target="_blank"> contact me </a>
     </div> 
     </div>
     <div class="columntext, bodytext">
