--- a/KIANNE/kianne.html
+++ b/KIANNE/kianne.html
@@ -4,20 +4,24 @@
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="kiannestyle.css">
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
+ </head>    
   <div>
+      <div class="logotext">
+        <body><b>kiannelim.</b></body>
+    </div>
   <div class="topnav">
-    <div class="logotext">
-     <h1>kiannelim.</h1>         
-      <div class="bodytext, topnav-right">
+
+      <div class="bodytext, topnav-right" align="right">
           <a href="https://www.behance.net/kiannelim?tracking_source=search%7Ckianne%20lim" target="_blank"> projects </a>
           <a href="https://www.instagram.com/kiannelim/" target="_blank"> insta </a>
           <a href="mailto: design@kiannelim.com" target="_blank"> contact me </a>
       </div> 
      </div>
+
     <div class="columntext, bodytext">
       <p>Kianne is a Singaporean industrial designer. Her story started with a delicious cup of fine arabica at a local coffee roastery where she worked alongside state-of-the-art coffee equipment. Captivated by how design and technology can come together to craft a lovely beverage and bring smiles to the table, she endeavours to design meaningful experiences. Her design strives for a balance between elegance and practicality.
   
-      </p></div>
+      </p>
       <div class="bodytext">
       <h2>As a designer, she values</h2>
        <ul>
@@ -35,5 +39,5 @@
    
  </body>
  
-</head> 
+
 </html>
