change default link colour

--- a/KIANNE/kianne.html
+++ b/KIANNE/kianne.html
@@ -4,6 +4,11 @@
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="kiannestyle.css">
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
+  <style>
+    a {
+      color: #FFBF00;
+      }
+  </style>
  </head>    
   <div>
       <div class="logotext">
