--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <button class="button">hire us</button>
     </div>
   </div>
-
+<p><a href="#week2.html" target="_blank"> #2 object experimentations </a></p>
 
  </head> 
  </html>
