edit jpg extension

--- a/week2.html
+++ b/week2.html
@@ -14,7 +14,7 @@
  </div>
 
     <h2>#2 Object Experimentations</h2>
-    <img src="IMAGE/dice.KPG">
+    <img src="IMAGE/dice.JPG">
     <img src="IMAGE/shakecube.png">
     <img src="IMAGE/spincube.png">
     <img src="IMAGE/tiltcubemusic.png">
