--- a/index.html
+++ b/index.html
@@ -1,18 +1,38 @@
  <!DOCTYPE html>
  <html lang="en">
- <head>
+
+  <style>
+    div{
+    margin-top: 0px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 0px;}
+  </style>
+
+  <head>
    <meta charset="utf-8">
    <link rel="stylesheet" type="text/css" href="style.css">
    <link href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap" rel="stylesheet">
+  </head> 
 
    <div class="hero-image">
     <div class="hero-text">
-      <font size="+4"><h1> <b></b>charki</h1></font>
+      <font> size="+4"><h1> <b></b>charki</h1> </font>
       <p>we are microbit tinkers</p>
       <button class="button">hire us</button>
     </div>
   </div>
 
+<h2> About Us </h2>
+  <p>
+    Hello! We are Kianne and Charlotte. We are both Industrial Designers studying in the National University of Singapore...
+    Check out our webpages to find out more about us!
+  </p>
 
- </head> 
+<h2> Weekly Documentation </h2>
+  <p>
+    This webpage was created for our module under the guidance of our professor, Yuta.
+    Here, we document our findings week by week. Feel free to browse through our learning journey!
+  </p>
+ 
  </html>
