--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 
    <div class="hero-image">
     <div class="hero-text">
-      <font> size="+4"><h1> <b></b>charki</h1> </font>
+      <!-- <font> size="+4"><h1> <b></b>charki</h1> </font> -->
+      <style>
+        @import 'https://fonts.googleapis.com/css?family=Raleway&display=swap');
+      </style>
       <p>we are microbit tinkers</p>
       <button class="button">hire us</button>
     </div>
