--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
 
    <div class="hero-image">
     <div class="hero-text">
-      <!-- <font> size="+4"><h1> <b></b>charki</h1> </font> -->
-      <style>
-        @import 'https://fonts.googleapis.com/css?family=Raleway&display=swap');
-      </style>
+      <font> size="+4"><h1><b>charki</b></h1> </font>
       <p>we are microbit tinkers</p>
       <button class="button">hire us</button>
     </div>
