--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
    <div class="hero-image">
     <div class="hero-text">
-      <font> size="+4"><h1><b>charki</b></h1> </font>
+      <font> <size> +4 </size>
+      <h1><b>charki</b></h1> </font>
       <p>we are microbit tinkers</p>
       <button class="button">hire us</button>
     </div>
