--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 
    <div class="hero-image">
     <div class="hero-text">
-      <font> <size> +4 </size>
-      <h1><b>charki</b></h1> </font>
+      <font>
+        <h1><b>charki</b></h1>
+        <size> +4 </size>
+      </font>
       <p>we are microbit tinkers</p>
       <button class="button">hire us</button>
     </div>
