--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
    <div class="hero-image">
     <div class="hero-text">
       <font>
-        <h1><b>charki</b></h1>
-        <size> +4 </size>
+        <h1>charki</h1>
       </font>
       <p>we are microbit tinkers</p>
       <button class="button">hire us</button>
