--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
       Check out our webpages to find out more about us!
     </p>
 
+    <!-- Insert image of both of us here, centralised -->
+
+    <p>
+      <a href="https://charlotteho.weebly.com/" target="_blank">CHARLOTTE HO</a>
+      <a href="https://kiannelim.github.io/id2116/kianne.html" target="_blank">KIANNE LIM</a>
+    </p>
+
   <br>
   <br>
 
