--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <br>
   <br>
 
+<section>
   <h2> About Us </h2>
     <p>
       Hello! We are Kianne and Charlotte. We are both Industrial Designers studying in the National University of Singapore...
@@ -39,14 +40,17 @@
       <a href="https://charlotteho.weebly.com/" target="_blank">CHARLOTTE HO</a>
       <a href="https://kiannelim.github.io/id2116/kianne.html" target="_blank">KIANNE LIM</a>
     </p>
+</section>
 
   <br>
   <br>
 
+<section>
   <h2> Weekly Documentation </h2>
     <p>
       This webpage was created for our module under the guidance of our professor, Yuta.
       Here, we document our findings week by week. Feel free to browse through our learning journey!
     </p>
- 
+</section>
+
  </html>
