--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <br>
   <br>
 
-<section>
+<section class="About Us">
   <h2> About Us </h2>
     <p>
       Hello! We are Kianne and Charlotte. We are both Industrial Designers studying in the National University of Singapore...
@@ -45,7 +45,7 @@
   <br>
   <br>
 
-<section>
+<section class="Weekly Documentation">
   <h2> Weekly Documentation </h2>
     <p>
       This webpage was created for our module under the guidance of our professor, Yuta.
