--- a/index.html
+++ b/index.html
@@ -53,4 +53,11 @@
     </p>
 </section>
 
+<footer>
+  <p>
+    This website was created under the guidance of our professor, Yuta (HI YUTA!!!) for the module, ID2116 - Computing for Design.
+    Disclaimer: 
+  </p>
+</footer>
+
  </html>
