--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 <section class="About Us">
   <br>
   <br>
-  <h2> About Us </h2>
+  <br>
+  <h2 id="About Us"> About Us </h2>
     <p>
       Hello! We are Kianne and Charlotte. We are both Industrial Designers studying in the National University of Singapore...
       Check out our webpages to find out more about us!
@@ -41,27 +42,35 @@
     </p>
   <br>
   <br>
+  <br>
 </section>
 
 <section class="Weekly Documentation">
   <br>
   <br>
-  <h2> Weekly Documentation </h2>
+  <br>
+  <h2 id="Weekly Documentation"> Weekly Documentation </h2>
     <p>
       This webpage was created for our module under the guidance of our professor, Yuta.
       Here, we document our findings week by week. Feel free to browse through our learning journey!
     </p>
   <br>
-  <br>    
+  <br>  
+  <br>  
 </section>
 
 <footer>
   <br>
   <br>
+  <br>
   <p>
     This website was created under the guidance of our professor, Yuta (HI YUTA!!!) for the module, ID2116 - Computing for Design.
-    Disclaimer: 
+    <br>
+    <br>
+    <a href="#About Us:">About Us</a> <br>
+    <a href="#Weekly Documentation:">Weekly Documentation</a> <br>
   </p>
+  <br>
   <br>
   <br>
   <br>
