--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
     This website was created under the guidance of our professor, Yuta (HI YUTA!!!) for the module, ID2116 - Computing for Design.
     <br>
     <br>
-    <a href="#About Us:">About Us</a> <br>
-    <a href="#Weekly Documentation:">Weekly Documentation</a> <br>
+    <a href="#About Us:">About Us</a>   |   <a href="#Weekly Documentation:">Weekly Documentation</a>
   </p>
   <br>
   <br>
