--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     </p>
 
     <!-- Insert image of both of us here, centralised -->
+    <!-- Also, <br> is to break a line of text OR to create space in between paragraphs.-->
 
     <p>
       <a href="https://charlotteho.weebly.com/" target="_blank">CHARLOTTE HO</a>
