--- a/index.html
+++ b/index.html
@@ -46,10 +46,7 @@
   <br>
 </section>
 
-<section class="Weekly Documentation">
-  <br>
-  <br>
-  <br>
+<block>
   <h2 id="Weekly Documentation"> Weekly Documentation </h2>
     <p>
       This webpage was created for our module under the guidance of our professor, Yuta.
@@ -58,7 +55,7 @@
   <br>
   <br>  
   <br>  
-</section>
+</block>
 
 <footer>
   <br>
