--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
   </div>
 
-<section class="About Us">
+<block>
   <br>
   <br>
   <br>
@@ -44,9 +44,12 @@
   <br>
   <br>
   <br>
-</section>
+</block>
 
 <block>
+  <br>
+  <br>
+  <br>
   <h2 id="Weekly Documentation"> Weekly Documentation </h2>
     <p>
       This webpage was created for our module under the guidance of our professor, Yuta.
