--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
   </div>
 
-<block>
+<span>
   <br>
   <br>
   <br>
@@ -44,7 +44,7 @@
   <br>
   <br>
   <br>
-</block>
+  </span>
 
 <block>
   <br>
