--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
   </div>
 
-<span>
+<span.a>
   <br>
   <br>
   <br>
@@ -44,7 +44,7 @@
   <br>
   <br>
   <br>
-  </span>
+  </span.a>
 
 <block>
   <br>
