--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   </div>
 
 <span.a>
+  <section>
   <br>
   <br>
   <br>
@@ -44,6 +45,7 @@
   <br>
   <br>
   <br>
+  </section> 
   </span.a>
 
 <block>
