--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </font>
       <p>we are microbit tinkers</p>
       <br>
-      <button class="button">hire us</button>
+      <button class="button">HIRE US</button>
     </div>
   </div>
 
