--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
     </div>
   </div>
 
-<span.a>
-  <section>
+<block>
   <br>
   <br>
   <br>
@@ -34,6 +33,8 @@
     <p>
       Hello! We are Kianne and Charlotte. We are both Industrial Designers studying in the National University of Singapore...
       Check out our webpages to find out more about us!
+      <img src="image/about-us.png" alt="short description" style="width:500px;height:500px;">
+
     </p>
 
     <!-- Insert image of both of us here, centralised -->
@@ -46,10 +47,9 @@
   <br>
   <br>
   <br>
-  </section> 
-</span.a>
+</block>
 
-<block>
+<section>
   <br>
   <br>
   <br>
@@ -61,7 +61,7 @@
   <br>
   <br>  
   <br>  
-</block>
+</section>
 
 <footer>
   <br>
