--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <p>
       Hello! We are Kianne and Charlotte. We are both Industrial Designers studying in the National University of Singapore...
       Check out our webpages to find out more about us!
-      <img src="image/about-us.png" alt="short description" style="width:500px;height:500px;">
+      <img src="image/about-us.png" alt="short description" style="width: 100px;">
 
     </p>
 
