--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
       <br>
       <br>
       <img src="image/about-us.png" alt="short description" style="width:900px;height:271.15px;">
+      <!-- Need to add Yuta's phote..? Also, do you want to take a coordinated photo?-->
       <br>
       <br>
       <a href="https://charlotteho.weebly.com/" target="_blank">CHARLOTTE HO</a>
+      <!--How to add spacing here? Probably column...-->
       <a href="https://kiannelim.github.io/id2116/kianne.html" target="_blank">KIANNE LIM</a>
       <br>
       <br>
