--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
   <br>
   <h2 id="About Us"> About Us </h2>
     <p>
-      Hello! We are Kianne and Charlotte. We are both Industrial Designers studying in the National University of Singapore...
-      Check out our webpages to find out more about us!
+      Hello! We are Charlotte and Kianne two budding Industrial Designers striving to make a difference in the world of design.
+      In the meantime, we hide behind a whiteboard and snack on almonds and blueberries while building this very webpage.
+      We also have our individual webpages - Feel free to check them out!
+      <br>
       <br>
       <br>
       <img src="image/about-us.png" alt="short description" style="width:900px;height:271.15px;">
@@ -63,7 +65,7 @@
   <h2 id="Weekly Documentation"> Weekly Documentation </h2>
     <p>
       This webpage was created for our module under the guidance of our professor, Yuta.
-      Here, we document our findings week by week. Feel free to browse through our learning journey!
+      Here, we document our findings week by week. Join us in our learning journey by clicking on the images below!
     </p>
   <br>
   <br>  
