--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <font>
         <h1>C H A R K I</h1>
       </font>
-      <p>we are microbit tinkers</p>
+      <h3>we are microbit tinkers</h3>
       <br>
       <button class="button">HIRE US</button>
     </div>
