--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
   <br>
   <h2 id="About Us"> About Us </h2>
     <p>
-      Hello! We are Charlotte and Kianne two budding Industrial Designers striving to make a difference in the world of design.
-      In the meantime, we hide behind a whiteboard and snack on almonds and blueberries while building this very webpage.
+      Hello! We are Charlotte and Kianne, two budding Industrial Designers striving to make a difference in the world of design.
+      In the meantime, we camp behind a whiteboard and snack on almonds and blueberries while building this very webpage.
       We also have our individual webpages - Feel free to check them out!
       <br>
       <br>
