--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <div class="hero-image">
     <div class="hero-text">
       <font>
-        <h1>C H A R K I</h1>
-      </font>
+        <h1 id= "C H A R K I:"> C H A R K I </h1>
+        </font>
       <h3>we are microbit tinkers</h3>
       <br>
       <button class="button">HIRE US</button>
@@ -29,7 +29,7 @@
   <br>
   <br>
   <br>
-  <h2 id="About Us"> About Us </h2>
+  <h2> About Us </h2>
     <p>
       Hello! We are Charlotte and Kianne, two budding Industrial Designers striving to make a difference in the world of design.
       In the meantime, we camp behind a whiteboard and snack on almonds and blueberries while building this very webpage.
@@ -62,11 +62,14 @@
   <br>
   <br>
   <br>
-  <h2 id="Weekly Documentation"> Weekly Documentation </h2>
+  <h2> Weekly Documentation </h2>
     <p>
       This webpage was created for our module under the guidance of our professor, Yuta.
       Here, we document our findings week by week. Join us in our learning journey by clicking on the images below!
     </p>
+
+  <!-- Add side by side thumbnails here-->
+
   <br>
   <br>  
   <br>  
@@ -77,10 +80,7 @@
   <br>
   <br>
   <p>
-    This website was created under the guidance of our professor, Yuta (HI YUTA!!!) for the module, ID2116 - Computing for Design.
-    <br>
-    <br>
-    <a href="https://kiannelim.github.io/id2116/">Home</a>   |   <a href="#About Us:">About Us</a>   |   <a href="#Weekly Documentation:">Weekly Documentation</a>
+    Back to <a href="#C H A R K I">top</a>.
   </p>
   <br>
   <br>
