--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <br>
       <br>
       <img src="image/about-us.png" alt="short description" style="width:900px;height:271.15px;">
-      <!-- Need to add Yuta's phote..? Also, do you want to take a coordinated photo?-->
+      <!-- Need to add Yuta's photo..? Also, do you want to take a coordinated photo?-->
       <br>
       <br>
       <br>
@@ -49,9 +49,6 @@
       <br>
       <br>
     </p>
-
-    <!-- Insert image of both of us here, centralised -->
-    <!-- Also, <br> is to break a line of text OR to create space in between paragraphs.-->
 
   <br>
   <br>
@@ -69,6 +66,7 @@
     </p>
 
   <!-- Add side by side thumbnails here-->
+  <a href="https://kiannelim.github.io/id2116/week2.html" target="_blank">WEEK 2</a>
 
   <br>
   <br>  
