--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
 
   <!-- Add side by side thumbnails here-->
   <a href="https://kiannelim.github.io/id2116/week2.html" target="_blank">WEEK 2</a>
+  <a href="https://kiannelim.github.io/id2116/week2.html" target="_blank">WEEK 3</a>
+  <a href="https://kiannelim.github.io/id2116/week2.html" target="_blank">WEEK 4</a>
 
   <br>
   <br>  
