--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <br>
       <br>
       <br>
-      <img src="id2116/image/about-us.png" alt="about-us" style="width:900px;height:271.15px;">
+      <img src="IMAGE/about-us.png"about-us" style="width:900px;height:271.15px;">
       <!-- Need to add Yuta's photo..? Also, do you want to take a coordinated photo?-->
       <br>
       <br>
