--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
    <meta charset="utf-8">
    <link rel="stylesheet" type="text/css" href="style.css">
    <link href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap" rel="stylesheet">
-   <style>
+   <!-- <style>
     div{
     margin-top: -10px;
     margin-left: -10px;
     margin-right: -10px;
-    margin-bottom: 0px;}
-  </style>
+    margin-bottom: 0px;} 
+  </style> -->
   </head> 
 
   <div class="hero-image">
