--- a/index.html
+++ b/index.html
@@ -66,9 +66,11 @@
     </p>
 
   <!-- Add side by side thumbnails here-->
-  <a href="https://kiannelim.github.io/id2116/week2.html" target="_blank">WEEK 2</a>
-  <a href="https://kiannelim.github.io/id2116/week2.html" target="_blank">WEEK 3</a>
-  <a href="https://kiannelim.github.io/id2116/week2.html" target="_blank">WEEK 4</a>
+  <div style="text-align: center;">
+    <a href="https://kiannelim.github.io/id2116/week2.html" target="_blank">WEEK 2</a> <br>
+    <a href="https://kiannelim.github.io/id2116/week2.html" target="_blank">WEEK 3</a> <br>
+    <a href="https://kiannelim.github.io/id2116/week2.html" target="_blank">WEEK 4</a>
+  </div>
 
   <br>
   <br>  
