--- a/week2.html
+++ b/week2.html
@@ -13,7 +13,7 @@
    </div>
  </div>
 
-    <h2>#2 Object Experimentations</h2>
+    <h2>Week 2 Object Experimentations</h2>
     <img src="IMAGE/dice.JPG">
     <img src="IMAGE/shakecube.png">
     <img src="IMAGE/spincube.png">
