--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <br>
   <br>
   <h2> Weekly Documentation </h2>
-    <p>
+    <p style="margin-left: 20px; margin-right: 20px;">
       This webpage was created for our module under the guidance of our professor, Yuta.
       Here, we document our findings week by week. Join us in our learning journey by clicking on the images below!
     </p>
