--- a/week3.html
+++ b/week3.html
@@ -7,12 +7,13 @@
 
   <div class="hero-image">
    <div class="hero-text">
-     <font size="+4"><h1> <b></b>charki</h1></font>
-     <p>we are microbit tinkers</p>
-     <button class="button">hire us</button>
+     <font size="+4"><h1> <b></b>Weekly Documentation</h1></font>
+     <p>Week 3</p>
    </div>
  </div>
 
+    <br>
+    <br>
     <h2>Week 3 Object Experimentations</h2>
     <img src="IMAGE/dice.JPG">
     <img src="IMAGE/shakecube.png">
