--- a/week2.html
+++ b/week2.html
@@ -15,7 +15,7 @@
     <br>
     <br>
     <h2>Week 2 Object Experimentations</h2>
-    <img src="IMAGE/dice.JPG"; width="40%"; rotate=90>
+    <img src="IMAGE/dice.JPG"; width="40%";>
     <img src="IMAGE/shakecube.png">
     <img src="IMAGE/spincube.png">
     <img src="IMAGE/tiltcubemusic.png">
