--- a/week2.html
+++ b/week2.html
@@ -16,9 +16,9 @@
     <br>
     <h2>Week 2 Object Experimentations</h2>
     <img src="IMAGE/dice.JPG"; width="40%"; height="70%"> <br>
-    <img src="IMAGE/shakecube.png">
-    <img src="IMAGE/spincube.png">
-    <img src="IMAGE/tiltcubemusic.png">
+    <img src="IMAGE/shakecube.png"; width="20%";>
+    <img src="IMAGE/spincube.png"; width="20%">
+    <img src="IMAGE/tiltcubemusic.png"; width="20%">
     
 
 </head> 
