--- a/week2.html
+++ b/week2.html
@@ -14,12 +14,13 @@
 
     <br>
     <br>
+    <section style="padding: 10px" text-align="center";>
     <h2>Week 2 Object Experimentations</h2>
     <img src="IMAGE/dice.JPG"; width="40%"; height="70%"> <br>
     <img src="IMAGE/shakecube.png"; width="20%";>
     <img src="IMAGE/spincube.png"; width="20%">
     <img src="IMAGE/tiltcubemusic.png"; width="20%">
-    
+  </section>
 
 </head> 
 </html>
