--- a/week3.html
+++ b/week3.html
@@ -14,12 +14,9 @@
 
     <br>
     <br>
-    <h2>Week 3 Object Experimentations</h2>
+    <h2>Week 3 Class Exercise</h2>
+    <p>https://kiannelim.github.io/id2116/week3.html/BulbOnOff/</p>
     <img src="IMAGE/dice.JPG">
-    <img src="IMAGE/shakecube.png">
-    <img src="IMAGE/spincube.png">
-    <img src="IMAGE/tiltcubemusic.png">
-    
 
 </head> 
 </html>
