--- a/week3.html
+++ b/week3.html
@@ -15,7 +15,7 @@
     <br>
     <br>
     <h2>Week 3 Class Exercise</h2>
-    <p>https://kiannelim.github.io/id2116/week3.html/BulbOnOff/</p>
+    <link href="https://kiannelim.github.io/id2116/week3.html/BulbOnOff/"> BulbOnOff </p>
     <img src="IMAGE/dice.JPG">
 
 </head> 
