--- a/week3.html
+++ b/week3.html
@@ -15,8 +15,11 @@
     <br>
     <br>
     <h2>Week 3 Class Exercise</h2>
-    <link href="https://kiannelim.github.io/id2116/week3.html/BulbOnOff/"> BulbOnOff </p>
-    <img src="IMAGE/dice.JPG">
+    <p>
+        Today we were introduced to p5.js - we learned how to create interactive images and a sideway-scroll photo album.
+        Here is what we did in class:
+        <a href="https://kiannelim.github.io/id2116/week3.html/BulbOnOff/"> BulbOnOff </a>
+    </p>
 
 </head> 
 </html>
