--- a/week3.html
+++ b/week3.html
@@ -18,6 +18,12 @@
     <p>
         Today we were introduced to p5.js - we learned how to create interactive images and a sideway-scroll photo album.
         Here is what we did in class:
+
+        Problems faced
+
+        Lessons learnt
+
+        Possible applications
     </p>
 
 </head> 
