--- a/week2.html
+++ b/week2.html
@@ -11,15 +11,28 @@
      <p>Week 2</p>
    </div>
  </div>
+</head>
 
+<body>
     <br>
     <br>
     <h2>Week 2 Object Experimentations</h2>
-    <img src="IMAGE/dice.JPG"; width="40%"; height="70%"> <br>
-    <img src="IMAGE/shakecube.png"; width="20%";>
-    <img src="IMAGE/spincube.png"; width="20%">
-    <img src="IMAGE/tiltcubemusic.png"; width="20%">
-  </section>
 
-</head> 
+    <div class="row">
+      <div class="column">
+        <img src="IMAGE/shakecube.png" alt="shakecube" style="width:20%">
+      </div>
+      <div class="column">
+        <img src="IMAGE/spincube.png" alt="spincube" style="width:20%">
+      </div>
+      <div class="column">
+        <img src="IMAGE/tiltcubemusic.png" alt="tiltcubemusic" style="width:20%">
+      </div>
+    </div>
+
+    <img src="IMAGE/dice.JPG"; width="40%"; height="70%"> <br>
+
+
+  </body>
+
 </html>
