--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     margin-top: -10px;
     margin-left: -10px;
     margin-right: -10px;
-    margin-bottom: 0px;} 
+    } 
    </style>
   </head> 
 
@@ -25,7 +25,8 @@
     </div>
   </div>
 
-<block style="background-color: beige;">
+<body>
+<div style="background-color: beige;">
   <br>
   <br>
   <br>
@@ -53,7 +54,7 @@
   <br>
   <br>
   <br>
-</block>
+</div>
 
 <section>
   <br>
@@ -89,5 +90,7 @@
   <br>
   <br>
 </footer>
+
+</body>
 
  </html>
