--- a/index.html
+++ b/index.html
@@ -26,29 +26,19 @@
   </div>
 
 <body>
-<div style="padding: 20px;">
-  <br>
-  <br>
-  <br>
+<div style="padding: 20px; background-color: bisque;">
   <h2> About Us </h2>
     <p>
       Hello! We are Charlotte and Kianne, two budding Industrial Designers striving to make a difference in the world of design.
       In the meantime, we camp behind a whiteboard and snack on almonds and blueberries while building this very webpage.
       We also have our individual webpages - Feel free to check them out!
-      <br>
-      <br>
-      <br>
+
       <img src="IMAGE/about-us.png" style="width:600px;height:180.77px;">
       <!-- Need to add Yuta's photo..? Also, do you want to take a coordinated photo?-->
-      <br>
-      <br>
-      <br>
+      
       <a href="https://charlotteho.weebly.com/" target="_blank">CHARLOTTE HO</a>
       <!--How to add spacing here? Probably column...-->
       <a href="https://kiannelim.github.io/id2116/kianne.html" target="_blank">KIANNE LIM</a>
-      <br>
-      <br>
-      <br>
     </p>
 
   <br>
