--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </div>
 
 <body>
-<div style="padding: 60px; background-color: bisque;">
+<div style="padding: 60px; background-color: bisque; margin-left: 10px; margin-right: 10px;">
   <h2> About Us </h2>
     <p>
       Hello! We are Charlotte and Kianne, two budding Industrial Designers striving to make a difference in the world of design.
