--- a/index.html
+++ b/index.html
@@ -48,29 +48,20 @@
     </p>
 </div>
 
-<section>
-  <br>
-  <br>
-  <br>
+<div style="padding-top: 60px; padding-left: 250px; padding-right: 250px; padding-bottom: 40px; text-align: center;">
   <h2> Weekly Documentation </h2>
     <p style="margin-left: 20px; margin-right: 20px;">
       This webpage was created for our module under the guidance of our professor, Yuta.
       Here, we document our findings week by week. Join us in our learning journey by clicking on the images below!
     </p>
 
-  <!-- Add side by side thumbnails here-->
-  <div style="text-align: center;">
+    <!-- Add side by side thumbnails here-->
     <a href="https://kiannelim.github.io/id2116/week2.html" target="_blank">WEEK 2</a> <br>
     <a href="https://kiannelim.github.io/id2116/week3.html" target="_blank">WEEK 3</a> <br>
     <a href="https://kiannelim.github.io/id2116/week4.html" target="_blank">WEEK 4</a>
   </div>
 
-  <br>
-  <br>  
-  <br>  
-</section>
-
-<footer>
+<footer style="background-color: rgb(8, 8, 70);">
   <br>
   <br>
   <br>
