--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <a href="https://kiannelim.github.io/id2116/week4.html" target="_blank">WEEK 4</a>
   </div>
 
-<footer style="background-color: rgb(8, 8, 70);">
+<footer style="background-color: rgb(8, 8, 70); text-color: white">
   <br>
   <br>
   <br>
