--- a/index.html
+++ b/index.html
@@ -36,8 +36,16 @@
       <br>
       <br>
 
-      <img src="IMAGE/about-us.png" style="width:600px;height:180.77px;">
-      <!-- Need to add Yuta's photo..? Also, do you want to take a coordinated photo?-->
+      <!-- <img src="IMAGE/about-us.png" style="width:600px;height:180.77px;">
+      Need to add Yuta's photo..? Also, do you want to take a coordinated photo?-->
+      <div class="row">
+        <div class="column">
+          <img src="IMAGE/charlottedp.png" alt="charlottedp" style="width:100%">
+        </div>
+        <div class="column">
+          <img src="IMAGE/kiannedp.png" alt="kiannedp" style="width:100%">
+        </div>
+      </div>
       
       <br>
       <br>
