--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       <div class="row" style="align-items: center;">
         <div class="column">
           <img src="IMAGE/charlottedp.png" alt="charlottedp" style="width:60%">
+          <a href="https://charlotteho.weebly.com/" target="_blank">CHARLOTTE HO</a>
         </div>
         <div class="column">
           <img src="IMAGE/kiannedp.png" alt="kiannedp" style="width:60%">
