--- a/index.html
+++ b/index.html
@@ -40,20 +40,14 @@
       Need to add Yuta's photo..? Also, do you want to take a coordinated photo?-->
       <div class="row" style="align-items: center;">
         <div class="column">
-          <img src="IMAGE/charlottedp.png" alt="charlottedp" style="width:60%">
+          <img src="IMAGE/charlottedp.png" alt="charlottedp" style="width:60%"> <br> <br>
           <a href="https://charlotteho.weebly.com/" target="_blank">CHARLOTTE HO</a>
         </div>
         <div class="column">
-          <img src="IMAGE/kiannedp.png" alt="kiannedp" style="width:60%">
+          <img src="IMAGE/kiannedp.png" alt="kiannedp" style="width:60%"> <br> <br>
+          <a href="https://kiannelim.github.io/id2116/kianne.html" target="_blank">KIANNE LIM</a>
         </div>
       </div>
-      
-      <br>
-      <br>
-
-      <a href="https://charlotteho.weebly.com/" target="_blank">CHARLOTTE HO</a>
-      <!--How to add spacing here? Probably column...-->
-      <a href="https://kiannelim.github.io/id2116/kianne.html" target="_blank">KIANNE LIM</a>
     </p>
 </div>
 
