--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
       <!-- <img src="IMAGE/about-us.png" style="width:600px;height:180.77px;">
       Need to add Yuta's photo..? Also, do you want to take a coordinated photo?-->
-      <div class="row" style="align-items: center;">
+      <div class="row" style="text-align: center;">
         <div class="column">
           <img src="IMAGE/charlottedp.png" alt="charlottedp" style="width:40%"> <br> <br>
           <a href="https://charlotteho.weebly.com/" target="_blank">CHARLOTTE HO</a>
