--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
  <!DOCTYPE html>
  <html lang="en">
 
-  <head style="text-align: center;">
+  <head>
    <meta charset="utf-8">
    <link rel="stylesheet" type="text/css" href="style.css">
    <link href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap" rel="stylesheet">
@@ -15,10 +15,10 @@
   </head> 
 
   <div class="hero-image">
-    <div class="hero-text">
+    <div class="hero-text" style="text-align: center;">
       <font>
         <h1 id= "C H A R K I"> C H A R K I </h1>
-        </font>
+      </font>
       <h3>we are microbit tinkers</h3>
       <br>
       <button class="button">HIRE US</button>
