--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
   </head> 
 
   <div class="hero-image">
-    <div class="hero-text" style="text-align: center;">
+    <div class="hero-text">
       <font>
-        <h1 id= "C H A R K I"> C H A R K I </h1>
+        <h1 id= "C H A R K I" style="text-align: center;"> C H A R K I </h1>
       </font>
       <h3>we are microbit tinkers</h3>
       <br>
-      <button class="button">HIRE US</button>
+      <button class="button" style="text-align: center;">HIRE US</button>
     </div>
   </div>
 
