--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
       <br>
       <br>
 
-      <!-- <img src="IMAGE/about-us.png" style="width:600px;height:180.77px;">
-      Need to add Yuta's photo..? Also, do you want to take a coordinated photo?-->
-      <div class="row" style="text-align: center;">
+      <!-- Side by Side images here-->
+      <div class="row1" style="text-align: center;">
         <div class="column">
           <img src="IMAGE/charlottedp.png" alt="charlottedp" style="width:40%"> <br> <br>
           <a href="https://charlotteho.weebly.com/" target="_blank">CHARLOTTE HO</a>
@@ -58,7 +57,7 @@
       Here, we document our findings week by week. Join us in our learning journey by clicking on the images below!
     </p>
 
-    <!-- Add side by side thumbnails here-->
+    <!-- Add side by side thumbnails here NEXT TIME-->
     <a href="https://kiannelim.github.io/id2116/week2.html" target="_blank">WEEK 2</a> <br>
     <a href="https://kiannelim.github.io/id2116/week3.html" target="_blank">WEEK 3</a> <br>
     <a href="https://kiannelim.github.io/id2116/week4.html" target="_blank">WEEK 4</a>
