--- a/week2.html
+++ b/week2.html
@@ -14,24 +14,24 @@
 </head>
 
 <body>
-    <br>
-    <br>
+  <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px;">
     <h2>Week 2 Object Experimentations</h2>
 
+    <img src="IMAGE/dice.JPG"; width="40%"; height="70%"> <br>
+
     <div class="row">
-      <div class="column">
+      <div class="column1">
         <img src="IMAGE/shakecube.png" alt="shakecube" style="width:20%">
       </div>
-      <div class="column">
+      <div class="column1">
         <img src="IMAGE/spincube.png" alt="spincube" style="width:20%">
       </div>
-      <div class="column">
+      <div class="column1">
         <img src="IMAGE/tiltcubemusic.png" alt="tiltcubemusic" style="width:20%">
       </div>
     </div>
 
-    <img src="IMAGE/dice.JPG"; width="40%"; height="70%"> <br>
-
+  </div>
 
   </body>
 
