--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 
       <!-- Side by Side images here-->
       <div class="row1" style="text-align: center;">
-        <div class="column">
+        <div class="column1">
           <img src="IMAGE/charlottedp.png" alt="charlottedp" style="width:40%"> <br> <br>
           <a href="https://charlotteho.weebly.com/" target="_blank">CHARLOTTE HO</a>
         </div>
-        <div class="column">
+        <div class="column1">
           <img src="IMAGE/kiannedp.png" alt="kiannedp" style="width:40%"> <br> <br>
           <a href="https://kiannelim.github.io/id2116/kianne.html" target="_blank">KIANNE LIM</a>
         </div>
