--- a/week2.html
+++ b/week2.html
@@ -20,13 +20,13 @@
     <img src="IMAGE/dice.JPG"; width="40%"; height="70%"> <br>
 
     <div class="row">
-      <div class="column1">
+      <div class="column">
         <img src="IMAGE/shakecube.png" alt="shakecube" style="width:20%">
       </div>
-      <div class="column1">
+      <div class="column">
         <img src="IMAGE/spincube.png" alt="spincube" style="width:20%">
       </div>
-      <div class="column1">
+      <div class="column">
         <img src="IMAGE/tiltcubemusic.png" alt="tiltcubemusic" style="width:20%">
       </div>
     </div>
