--- a/week2.html
+++ b/week2.html
@@ -19,14 +19,14 @@
 
     <img src="IMAGE/dice.JPG"; width="40%"; height="70%"> <br>
 
-    <div class="row">
-      <div class="column">
+    <div class="row2">
+      <div class="column2">
         <img src="IMAGE/shakecube.png" alt="shakecube" style="width:20%">
       </div>
-      <div class="column">
+      <div class="column2">
         <img src="IMAGE/spincube.png" alt="spincube" style="width:20%">
       </div>
-      <div class="column">
+      <div class="column2">
         <img src="IMAGE/tiltcubemusic.png" alt="tiltcubemusic" style="width:20%">
       </div>
     </div>
