--- a/week2.html
+++ b/week2.html
@@ -21,13 +21,13 @@
 
     <div class="row2">
       <div class="column2">
-        <img src="IMAGE/shakecube.png" alt="shakecube" style="width:20%">
+        <img src="IMAGE/shakecube.png" alt="shakecube" style="height;:20%">
       </div>
       <div class="column2">
-        <img src="IMAGE/spincube.png" alt="spincube" style="width:20%">
+        <img src="IMAGE/spincube.png" alt="spincube" style="height;:20%">
       </div>
       <div class="column2">
-        <img src="IMAGE/tiltcubemusic.png" alt="tiltcubemusic" style="width:20%">
+        <img src="IMAGE/tiltcubemusic.png" alt="tiltcubemusic" style="height;:20%">
       </div>
     </div>
 
