--- a/week2.html
+++ b/week2.html
@@ -17,10 +17,11 @@
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px;">
     <h2>Week 2 Object Experimentations</h2>
 
-    <img src="IMAGE/dice.JPG"; width="40%"; height="70%"> <br>
+    <img style="text-align: center;" src="IMAGE/dice.JPG"; width="40%"; height="70%"> <br>
+  </div>
 
-    <div class="row2">
-      <div class="column2">
+  <div class="row2">
+      <div class="column2" style="text-align: center;">
         <img src="IMAGE/shakecube.png" alt="shakecube" style="height:20%">
       </div>
       <div class="column2">
@@ -29,8 +30,6 @@
       <div class="column2">
         <img src="IMAGE/tiltcubemusic.png" alt="tiltcubemusic" style="height:20%">
       </div>
-    </div>
-
   </div>
 
   </body>
