--- a/week2.html
+++ b/week2.html
@@ -8,28 +8,37 @@
   <div class="hero-image">
    <div class="hero-text">
      <font size="+4"><h1> <b></b>Weekly Documentation</h1></font>
-     <p>Week 2</p>
+     <h3>Week 2  |  16.01.2020</h3>
    </div>
  </div>
 </head>
 
 <body>
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px;">
-    <h2>Week 2 Object Experimentations</h2>
-
-    <img style="text-align: center;" src="IMAGE/dice.JPG"; width="40%"; height="70%"> <br>
+    <h2>Class Exercises</h2>
+    <p>
+      Microbit <br>
+      Introduction to HTML and CSS. Our Website is born today.
+    </p>
   </div>
 
-  <div class="row2">
-      <div class="column2" style="text-align: center;">
-        <img src="IMAGE/shakecube.png" alt="shakecube" style="width:20%">
-      </div>
-      <div class="column2">
-        <img src="IMAGE/spincube.png" alt="spincube" style="width:20%">
-      </div>
-      <div class="column2">
-        <img src="IMAGE/tiltcubemusic.png" alt="tiltcubemusic" style="width:20%">
-      </div>
+  <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px;">
+    <h2>Microbit Project Progress</h2>
+
+    <img style="text-align: center;" src="IMAGE/dice.JPG"; width="40%"; height="70%">
+    <br>
+    <br>
+    <div class="row2">
+        <div class="column2" style="text-align: center;">
+          <img src="IMAGE/shakecube.png" alt="shakecube" style="width:20%">
+        </div>
+        <div class="column2">
+          <img src="IMAGE/spincube.png" alt="spincube" style="width:20%">
+        </div>
+        <div class="column2">
+          <img src="IMAGE/tiltcubemusic.png" alt="tiltcubemusic" style="width:20%">
+        </div>
+    </div>
   </div>
 
   </body>
