--- a/week3.html
+++ b/week3.html
@@ -8,7 +8,7 @@
   <div class="hero-image">
    <div class="hero-text">
      <font size="+4"><h1> <b></b>Weekly Documentation</h1></font>
-     <p>Week 3</p>
+     <h3>Week 3  |  31.01.2020</h3>
    </div>
  </div>
 
