--- a/week2.html
+++ b/week2.html
@@ -8,7 +8,7 @@
   <div class="hero-image">
    <div class="hero-text">
      <font size="+4"><h1> <b></b>Weekly Documentation</h1></font>
-     <h3>Week 2  |  16.01.2020</h3>
+     <h3>Week 2   |   16.01.2020</h3>
    </div>
  </div>
 </head>
@@ -22,7 +22,7 @@
     </p>
   </div>
 
-  <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px;">
+  <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px; background-color: whitesmoke;">
     <h2>Microbit Project Progress</h2>
 
     <img style="text-align: center;" src="IMAGE/dice.JPG"; width="40%"; height="70%">
