--- a/week2.html
+++ b/week2.html
@@ -19,9 +19,19 @@
     <p>
       Microbit <br>
       Introduction to HTML and CSS. Our Website is born today.
+
+      <br>
+
+      Problems faced <br>
+
+      Lessons learnt <br>
+
+      Possible applications <br>
     </p>
   </div>
 
+  <hr>
+  
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px; background-color: turquoise;">
     
     <h2>Microbit Project Progress</h2>
@@ -41,6 +51,19 @@
         </div>
     </div>
   </div>
+
+  <footer style="background-color: rgb(8, 8, 70); color: white;">
+    <br>
+    <br>
+    <br>
+    <p>
+      Lorem ipsom dolor sit amet.
+    </p>
+    <br>
+    <br>
+    <br>
+    <br>
+  </footer>
 
   </body>
 
