--- a/week3.html
+++ b/week3.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <link href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap" rel="stylesheet">
-
-  <div class="hero-image">
-   <div class="hero-text">
-     <font size="+4"><h1> <b></b>Weekly Documentation</h1></font>
-     <h3>Week 3   |   31.01.2020</h3>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap" rel="stylesheet">
+  
+    <div class="hero-image">
+     <div class="hero-text">
+       <font size="+4"><h1> <b></b>Weekly Documentation</h1></font>
+       <h3>Week 3   |   31.01.2020</h3>
+     </div>
    </div>
- </div>
+</head>
 
+<body>
     <br>
     <br>
     <h2>Week 3 Class Exercise</h2>
@@ -26,5 +28,19 @@
         Possible applications
     </p>
 
-</head> 
+    <footer style="background-color: rgb(8, 8, 70); color: white;">
+        <br>
+        <br>
+        <br>
+        <p>
+            Lorem ipsom dolor sit amet.
+        </p>
+        <br>
+        <br>
+        <br>
+        <br>
+      </footer>
+
+</body> 
+
 </html>
