--- a/week2.html
+++ b/week2.html
@@ -30,9 +30,7 @@
     </p>
   </div>
 
-  <hr>
-  
-  <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px; background-color: turquoise;">
+  <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px; background-color: snow">
     
     <h2>Microbit Project Progress</h2>
 
