--- a/week2.html
+++ b/week2.html
@@ -55,7 +55,9 @@
     <br>
     <br>
     <p>
-      Lorem ipsom dolor sit amet.
+      <a href="https://kiannelim.github.io/id2116/index.html">HOME</a> <br>
+      <a href="https://kiannelim.github.io/id2116/week2.html" target="_blank">WEEK 2</a>   |   
+      <a href="https://kiannelim.github.io/id2116/week3.html" target="_blank">WEEK 3</a>   |   
     </p>
     <br>
     <br>
